# typetalk-sentiment

./: .editorconfig  .gitignore  README.md  compose.iac.yaml  compose.yaml
apps/api/: .editorconfig  .env.aws.example  .env.example  .env.production.example  .env.test.example  .gitignore  Dockerfile  README.md  pyproject.toml
apps/api/docs/: architecture-api.md  coding-standards-api.md  document-index-api.md  error-handling-api.md  testing-api.md
apps/api/log_config/: log_config_lambda.json  log_config_local.json  log_config_null.json
apps/api/scripts/: audit.sh
apps/api/src/: main.py
apps/api/src/api/: dependencies.py  routers.py
apps/api/src/core/: config.py
apps/api/src/core/logger/: formatter.py  logger.py
apps/api/src/exceptions/: exception_handlers.py  exceptions.py
apps/api/src/infrastructure/aws/comprehend/: aws_comprehend_api.py  aws_comprehend_api_mock.py  aws_comprehend_models.py  exceptions.py  i_aws_comprehend_api.py
apps/api/src/infrastructure/typetalk/: exceptions.py  i_typetalk_api.py  typetalk_api.py
apps/api/src/schemas/: account.py  core.py  message.py  space.py  topic.py
apps/api/src/use_cases/: get_messages.py  get_spaces.py  get_topics.py
apps/api/tests/: conftest.py
apps/api/tests/unit/: conftest.py
apps/api/tests/unit/api/: conftest.py  test_core_api.py  test_get_messages_api.py  test_get_spaces_api.py  test_get_topics_api.py
apps/api/tests/unit/infrastructure/typetalk/: test_typetalk_api.py
apps/api/tests/unit/use_cases/: test_get_messages_use_case.py  test_get_spaces_use_case.py  test_get_topics_use_case.py
(+122 files in other folders)
