[project]
requires-python = ">=3.12"

[tool.poetry]
name = "typetalk-sentiment-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.7"}
boto3 = "^1.34.14"
pydantic-settings = "^2.1.0"


[tool.poetry.group.dev.dependencies]
types-requests = "^2.31.0.10"
boto3-stubs = {extras = ["comprehend"], version = "^1.34.14"}
pytest = "^8.0.0"
pytest-dotenv = "^0.5.2"
pytest-cov = "^4.1.0"
pytest-mock = "^3.14.0"
ruff = "^0.3.2"
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # pep8-naming
    "N",
    # mccabe
    "C90",
    # pydocstyle
    "D",
]

ignore = ["D104", "D415"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
files = ["src/", "tests/"]
disallow_untyped_defs = true

[tool.pytest.ini_options]
addopts = "-v -m 'not integration'"
markers = [
    "integration: marks tests as integration tests",
]
# テスト実行時に .env.test を読み込む
env_files = [".env.test"]
# 全角文字がエスケープされないように true を設定する
disable_test_id_escaping_and_forfeit_all_rights_to_community_support = true
